# ai_cjtz

./: .dockerignore  .env.docker.example  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci-deploy.yml
config/: bootstrap.enc.b64  platforms.csv  site_rules.json
docs/: architecture.md  compliance.md  incremental-strategy.md  operations.md  platform_inventory.md
frontend/: Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  api.ts  main.tsx  styles.css  types.ts
frontend/src/components/: Shell.tsx
frontend/src/pages/: AdministrationPage.tsx  (+7 more)
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_dedupe_source_collections.py
scripts/: backup.sh  create_initial_tasks.py  deploy.sh  docker-entrypoint.sh  install_windows_task.ps1  production_validate.py  reconcile_platform_status.py  restore.sh  run_scheduled.ps1  set_admin_password.py  uninstall_windows_task.ps1
src/data_market_probe/: __init__.py  api.py  archive.py  auth.py  bootstrap.py  cli.py  crawler.py  database.py  enrichment.py  extraction.py  fetching.py  models.py  object_store.py  privacy.py  query.py  reporting.py  repository.py  scheduler.py  seed.py  settings.py  status.py  tasks.py  taxonomy.py  utils.py
tests/: conftest.py  test_api_rbac.py  test_crawler_incremental.py  test_extraction.py  test_object_store_and_bootstrap.py  test_password_policy.py  test_privacy.py  test_public_api_adapter.py  test_reporting.py  test_repository_versioning.py  test_utils_and_fetching.py
