[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "data-market-probe"
version = "0.1.0"
description = "Incremental catalog crawler and query service for Chinese data marketplaces."
requires-python = ">=3.11"
dependencies = [
  "SQLAlchemy>=2.0,<3.0",
  "httpx>=0.27,<1.0",
  "beautifulsoup4>=4.12,<5.0",
  "lxml>=5.2,<7.0",
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "APScheduler>=3.10,<4.0",
  "typer>=0.12,<1.0",
  "pydantic-settings>=2.4,<3.0",
  "python-dateutil>=2.9,<3.0",
  "pypdf>=5.0,<7.0",
  "alembic>=1.13,<2.0",
  "psycopg[binary]>=3.2,<4.0",
  "minio>=7.2,<8.0",
  "redis>=5.1,<7.0",
  "celery[redis]>=5.4,<6.0",
  "croniter>=3.0,<7.0",
  "PyJWT>=2.9,<3.0",
  "argon2-cffi>=23.1,<26.0",
  "python-multipart>=0.0.12,<1.0",
  "sse-starlette>=2.1,<4.0",
]

[project.optional-dependencies]
agent = [
  "mcp>=1.0,<2.0",
]
browser = [
  "playwright>=1.47,<2.0",
]
dev = [
  "pytest>=8.2,<10.0",
  "pytest-asyncio>=0.23,<2.0",
  "httpx>=0.27,<1.0",
  "coverage>=7.6,<8.0",
]

[project.scripts]
dmp = "data_market_probe.cli:main"
data-market-probe = "data_market_probe.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
asyncio_mode = "auto"
testpaths = ["tests"]
